# mega

./: .gitignore  .gitmodules  Cargo.toml
.github/workflows/: release.yml  release_next.yml
aries/: BUCK
atlas/: BUCK
ceres/: BUCK
ceres/src/api_service/: import_api_service.rs  mono_api_service.rs
ceres/src/pack/: import_repo.rs  mod.rs  monorepo.rs
common/: BUCK  Cargo.toml
common/src/: errors.rs
craft/: BUCK
gateway/: BUCK
gemini/: BUCK  Cargo.toml
jupiter/: BUCK  Cargo.toml
jupiter/callisto/: Cargo.toml
jupiter/callisto/src/: mercury_adapters.rs
jupiter/src/: adapter.rs
jupiter/src/storage/: git_db_storage.rs  mono_storage.rs
jupiter/src/utils/: converter.rs
jupiter/tests/: jupiter_tests.rs
mercury/: BUCK  Cargo.toml
mercury/src/internal/model/: commit.rs
mercury/src/internal/object/: commit.rs
mercury/src/internal/pack/: cache_object.rs
monobean/resources/: org.Web3Infrastructure.Monobean.gresource.xml  packager_x86_64-pc-windows-msvc.toml
monobean/resources/gtk/: code_page.ui
monobean/src/: window.rs
monobean/src/components/file_tree/: file_object.rs
neptune/: BUCK
panel/: Cargo.toml
panel/refactored/workspace/: Cargo.toml
panel/refactored/workspace/src/: pane.rs  workspace.rs
panel/src/: frontend.rs  main.rs
panel/src/frontend/workspace/: Cargo.toml
saturn/: BUCK
scorpio/: BUCK  Cargo.toml
toolchains/: BUCK
vault/: BUCK
venus/: BUCK
